src/app/hazdev-template/styles.scss
@import 'theme.scss';

* {
  box-sizing: border-box;
  word-wrap: break-word;
}
html {
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-size: 10px;
}
body {
  color: #333333;
  font-size: 17px;
  line-height: 1.5;
  margin: 0;
}
p {
  margin: 1em 0;
}
h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
  display: block;
  font-family: 'Merriweather',Times,serif;
  line-height: 1.3;
  margin: 1.5em 0 0.5em;
}
header > h1, header > .h1 {
  margin-top: 0.75em;
}
h1, .h1 {
  font-size: 1.7625em;
}
h2, .h2 {
  font-size: 1.175em;
}
h3, .h3 {
  font-size: 1em;
}
h4, .h4 {
  font-size: 0.88125em;
}
h5, .h5 {
  font-size: 0.763755em;
}
h6:not(.h1):not(.h2):not(.h3):not(.h4):not(.h5), .h6 {
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-size: 0.763755em;
  font-weight: 400;
  text-transform: uppercase;
}
/* Remove user agent styles */
cite, var, address, dfn {
  font-style: normal;
}
/** Text Level Semantics **/
a {
  color: #0071bc;
}
a:visited {
  color: #4c2c92;
}
a:active {
  color: #205493;
}
abbr {
  cursor: help;
}
pre, code {
  background: #f4f4f4;
  border-radius: 3px;
  color: #666666;
  font-family: Consolas,monospace,serif;
}
:not(pre)>code {
  border: 1px solid #dddddd;
  padding: 2px 4px;/* do not break code element unless inside pre tag */
  white-space: nowrap;
}
code {
  font-size: 0.88em;
}
pre {
  border: 1px solid #dddddd;
  padding: 1em;
  overflow: scroll;
  margin: 1em 0;
}
pre > code {
  word-wrap: normal;
}
mark {
  background-color: #ffa;
  padding: 2px 4px;
}

.mat-button-wrapper {
  font-weight: 400;
}


/* Grid */


/* rows are left-to-right */
.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-left: -1em;
}

.column {
  flex-basis: auto;
  /* make gutter on right side of each column */
  padding-left: 1em;
  width: 100%;
}

/* /1 */
.mobile-one-of-one    { width: 100%; }

/* /2 */
.mobile-two-up > .column,
.mobile-one-of-two    { width: calc(100%*1/2); }

/* /3 */
.mobile-three-up > .column,
.mobile-one-of-three  { width: calc(100%*1/3); }
.mobile-two-of-three  { width: calc(100%*2/3); }

/* /4 */
.mobile-four-up > .column,
.mobile-one-of-four   { width: calc(100%*1/4); }
.mobile-two-of-four   { width: calc(100%*2/4); }
.mobile-three-of-four { width: calc(100%*3/4); }

/* /5 */
.mobile-five-up > .column,
.mobile-one-of-five   { width: calc(100%*1/5); }
.mobile-two-of-five   { width: calc(100%*2/5); }
.mobile-three-of-five { width: calc(100%*3/5); }
.mobile-four-of-five  { width: calc(100%*4/5); }


@media screen and (min-width: 768px), print {

  /* unless the right-to-left class is present */
  .row.right-to-left {
    flex-direction: row-reverse;
  }

  /* /1 */
  .one-of-one    { width: 100%; }

  /* /2 */
  .two-up > .column,
  .one-of-two    { width: calc(100%*1/2);; }

  /* /3 */
  .three-up > .column,
  .one-of-three  { width: calc(100%*1/3); }
  .two-of-three  { width: calc(100%*2/3); }

  /* /4 */
  .four-up > .column,
  .one-of-four   { width: calc(100%*1/4); }
  .two-of-four   { width: calc(100%*2/4); }
  .three-of-four { width: calc(100%*3/4); }

  /* /5 */
  .five-up > .column,
  .one-of-five   { width: calc(100%*1/5); }
  .two-of-five   { width: calc(100%*2/5); }
  .three-of-five { width: calc(100%*3/5); }
  .four-of-five  { width: calc(100%*4/5); }

}


.alert {
  background-color: #ccc;
  margin: 1em 0;
  overflow: hidden;
  padding: calc(1em * 3/2) calc(1em * 2);
  position: relative;
}

.alert > :first-child {
  margin-top: 0;
}

.alert > :last-child {
  margin-bottom: 0;
}

.error:before,
.info:before,
.success:before,
.warning:before {
  content: '';
  font-family: 'Material Icons';
  font-size: 4.5em;
  left: -0.2em;
  line-height: 1;
  opacity: 0.075;
  position: absolute;
  top: -0.2em;
}

.error {
  background-color: #F9DEDE;
}

.error:before {
  content: '\0e15c';
}


.info {
  background-color: #E8F5FA;
}

.info:before {
  content: '\0e88e';
}


.success {
  background-color: #E5FCDE;
}

.success:before {
  content: '\0e86c';
}


.warning {
  background-color: #FDF7DC;
}

.warning:before {
  content: '\0e002';
}


.no-icon:before {
  content: '';
}

